Make sure to properly align the urlbar when it's not floating on compact mode

--- a/src/browser/base/content/zen-styles/zen-compact-mode.css
+++ b/src/browser/base/content/zen-styles/zen-compact-mode.css
@@ -345,6 +345,10 @@
           opacity: var(--zen-grainy-background-opacity, 0);
           mix-blend-mode: overlay;
         }
+
+        & #urlbar:not([zen-floating-urlbar='true']) {
+          top: 2px !important;
+        }
       }
     }
   }
